--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 # Add regular dependencies here.
 dependencies:
   meta: ^1.10.0
+  protobuf: ^3.1.0
+  uuid: ^4.0.0
   # path: ^1.8.0
 
 dev_dependencies:
