--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  meta: ^1.10.0
+  meta: 1.9.1
   protobuf: ^3.1.0
   uuid: ^4.0.0
   # path: ^1.8.0
